--- a/src/dashboard/products/components/storehouse-form/storehouse-form.component.html
+++ b/src/dashboard/products/components/storehouse-form/storehouse-form.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light border border-bottom-0">
-    <a class="navbar-brand">{{ exists ? "Update" : "Add" }} Storehouse</a>
+    <a class="navbar-brand">{{ exists ? "Update" : "Add" }} Warehouse</a>
 </nav>
 
 <form [formGroup]="form" (ngSubmit)="submit()" class="p-3 border">
