--- a/src/home/containers/details/details.component.html
+++ b/src/home/containers/details/details.component.html
@@ -78,9 +78,9 @@
                     </div>
                 </div>
                 <div class="product-detail-tab-detal">
-                    <div *ngFor="let item of productDetails?.items">
+                    <!-- <div *ngFor="let item of productDetails?.items">
                         <details-collapse [item]='item'></details-collapse>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <product-related></product-related>
