--- a/src/shared/ngTable/ng-table/ng-table.component.html
+++ b/src/shared/ngTable/ng-table/ng-table.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="searchableArray.length>0" class="d-print-none" (ngSubmit)="onSearchSubmit()">
+<!-- <form *ngIf="searchableArray.length>0" class="d-print-none" (ngSubmit)="onSearchSubmit()">
     <div class="row">
         <div class="col"></div>
         <div class="col-auto">
@@ -11,7 +11,7 @@
             </div>
         </div>
     </div>
-</form>
+</form> -->
 
 <table class="table table-striped border table-sm">
     <thead NgTableHeader [columns]="columns" [tableName]="tableName" [sortColumn]="sortColumn"
