table desin fix

--- a/src/shared/ngTable/ng-table/ng-table.component.html
+++ b/src/shared/ngTable/ng-table/ng-table.component.html
@@ -13,7 +13,7 @@
     </div>
 </form> -->
 
-<table class="table table-striped border table-sm">
+<table class="table table-hover table-bordered mt-2 text-secondary table-responsive-sm table-sm bg-white">
     <thead NgTableHeader [columns]="columns" [tableName]="tableName" [sortColumn]="sortColumn"
         (onSort)="handleSort($event)"></thead>
     <tbody NgTableBody [data]="data?.docs" [columns]="columns" (btnEvent)="handleEvent($event)"></tbody>
