add inventory done

--- a/src/dashboard/inventory/components/inventory-details/inventory-details.component.html
+++ b/src/dashboard/inventory/components/inventory-details/inventory-details.component.html
@@ -32,7 +32,7 @@
 <div class="form-group row border-top m-0 my-1">
     <div class="col-sm-6 p-0">
         <label for="shop" class="col-auto col-form-label">Storehouse: </label>
-        <label id="shop" class="col-form-label">{{inventory?.storehouse?.name}}</label>
+        <label id="shop" class="col-form-label">{{inventory?.warehouse?.name}}</label>
     </div>
     <div class="col-sm-6 p-0" *ngIf="inventory?.supplier">
         <label for="shop" class="col-auto col-form-label">Supplier: </label>
