--- a/src/dashboard/inventory/containers/add/add.component.html
+++ b/src/dashboard/inventory/containers/add/add.component.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 mb-5">
             <inventory-form (create)="onCreateInventory($event)"></inventory-form>
         </div>
     </div>
