--- a/src/shared/ngTable/ng-table/ng-table.component.html
+++ b/src/shared/ngTable/ng-table/ng-table.component.html
@@ -29,5 +29,7 @@
         <option [ngValue]="4">4/Page</option>
         <option [ngValue]="8">8/Page</option>
         <option [ngValue]="16">16/Page</option>
+        <option [ngValue]="32">32/Page</option>
+        <option [ngValue]="64">64/Page</option>
     </select>
 </div>
