--- a/src/dashboard/inventory/containers/add/add.component.html
+++ b/src/dashboard/inventory/containers/add/add.component.html
@@ -2,7 +2,7 @@
     <h3>Add Inventory</h3>
 </div>
 
-<div class="container-fluid">
+<div class="container bg-white">
     <loading *ngIf="loading"></loading>
     <div class="alert alert-success alert-dismissible show" role="alert" *ngIf="message.length > 0">
         <strong>Success! </strong> {{ message }}
