--- a/src/dashboard/users/containers/reset-password/reset-password.component.html
+++ b/src/dashboard/users/containers/reset-password/reset-password.component.html
@@ -18,14 +18,11 @@
     </div>
 
     <div class="row" *ngIf="!loading">
-        <div class="col-md-6 col-12">
-            <nav class="navbar navbar-light bg-light border">
-                <a class="navbar-brand">User List</a>
-            </nav>
-            <user-list [users]="users" (edit)="onEdit($event)"></user-list>
+        <div class="col-md-7 col-12">
+            <user-list [userPage]="userPage" (edit)="onEdit($event)" (refresh)="refreshData($event)"></user-list>
         </div>
-        <div class="col-md-6 col-12" *ngIf="user && showPasswordForm">
-            <reset-password-form [user]="user" (cancel)="onClose()" (changePass)="onPasswordChange($event)">
+        <div class="col-md-5 col-12" *ngIf="user">
+            <reset-password-form [item]="user" (update)="onPasswordChange($event)">
             </reset-password-form>
         </div>
     </div>
