--- a/src/dashboard/users/components/reset-password-form/reset-password-form.component.html
+++ b/src/dashboard/users/components/reset-password-form/reset-password-form.component.html
@@ -1,45 +1,23 @@
-form
 <nav class="navbar navbar-light bg-light border border-bottom-0">
-    <a class="navbar-brand">Change password of {{ user?.name }}</a>
+    <a class="navbar-brand">Change password of {{ item?.name }}</a>
 </nav>
-<form [formGroup]="form" (ngSubmit)="submit()" class="p-3 border">
-    <div class="form-group row">
-        <label for="name" class="col-sm-2 col-form-label">Name</label>
-        <div class="col-sm-10">
-            <label id="name" class="form-control">{{ user?.name }}</label>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="phone" class="col-sm-2 col-form-label">Phone</label>
-        <div class="col-sm-10">
-            <label id="phone" class="form-control">{{ user?.phone }}</label>
-        </div>
+<!-- {{item | json}} -->
+<form [formGroup]="form" (ngSubmit)="submit()" class="p-3 border" (mouseleave)="mouseoverShifting = false">
+    <form-object-label [label]="'Name'" [name]="item?.name" [showButton]="false"></form-object-label>
+    <form-object-label [label]="'Phone'" [name]="item?.phone" [showButton]="false"></form-object-label>
+
+    <form-password [fieldId]="'password'" [control]="form.get('password')"></form-password>
+
+    <!-- Buttons -->
+    <div class="d-flex flex-row-reverse bd-highlight">
+        <span (mouseenter)="mouseoverShifting = true">
+            <button type="submit" class="btn btn-sm btn-light mx-1" [disabled]="!form.valid"> Update </button>
+        </span>
+        <button type="button" class="btn btn-sm btn-light mx-1" (click)="clean()">Clear</button>
     </div>
 
-    <div class="form-group row">
-        <label for="password" class="col-sm-2 col-form-label">Password</label>
-        <div class="col-sm-10">
-            <div class="input-group mb-1 mb-sm-0">
-                <input type="text" id="password" class="form-control" placeholder="Password"
-                    formControlName="password" />
-            </div>
-            <small class="text-danger" *ngIf="form.controls.password.errors && form.controls.password.touched">
-                <div [hidden]="!form.controls['password'].errors.required">
-                    Password required
-                </div>
-                <div [hidden]="!form.controls['password'].errors.minlength">
-                    Minimum passwor length required 6
-                </div>
-            </small>
-        </div>
-    </div>
-
-    <div class="d-flex justify-content-end">
-        <button type="submit" class="btn btn-primary mx-1" [ngClass]="{ disabled: form.invalid }">
-            Change
-        </button>
-        <button type="button" class="btn btn-danger mx-1" (click)="onCancel()">
-            Cancel
-        </button>
+    <!-- Form validation error list -->
+    <div *ngIf="mouseoverShifting" class="text-danger">
+        <form-validator [form]="form"></form-validator>
     </div>
 </form>
