small bug fix and update

--- a/src/dashboard/settings/containers/brands/brands.component.html
+++ b/src/dashboard/settings/containers/brands/brands.component.html
@@ -4,12 +4,12 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-7">
-            <brands-table [brandPage]="brandPage" [imageUrl]="imageUrl" (edit)="onEdit($event)"
-                (refresh)="refreshData($event)">
-            </brands-table>
+                <brands-table [brandPage]="brandPage" [imageUrl]="imageUrl" (edit)="onEdit($event)"
+                    (refresh)="refreshData($event)">
+                </brands-table>
         </div>
         <div class="col-md-5">
-            <div class=" border rounded">
+            <div class=" border rounded bg-white">
                 <brand-form [item]="brand" [err]="errorMessage" (create)="onCreate($event)" (update)="onUpdate($event)"
                     (delete)="onDelete($event)">
                 </brand-form>
