--- a/src/dashboard/settings/containers/categories/categories.component.html
+++ b/src/dashboard/settings/containers/categories/categories.component.html
@@ -10,7 +10,7 @@
             </category-table>
         </div>
         <div class="col-md-5">
-            <div class=" border rounded">
+            <div class="border rounded bg-white">
                 <category-form [item]="category" [err]="errorMessage" (create)="onCreate($event)"
                     (update)="onUpdate($event)" (delete)="onDelete($event)">
                 </category-form>
