--- a/src/dashboard/settings/containers/sub-sub-categories/sub-sub-categories.component.html
+++ b/src/dashboard/settings/containers/sub-sub-categories/sub-sub-categories.component.html
@@ -10,7 +10,7 @@
             </sub-sub-category-table>
         </div>
         <div class="col-md-5">
-            <div class=" border rounded">
+            <div class=" border rounded bg-white">
                 <sub-sub-category-form [item]="subSubCategory" [categories]="categoryPage?.docs"
                     [subCategories]="subCategoryPage?.docs" [err]="errorMessage" (create)="onCreate($event)"
                     (update)="onUpdate($event)" (delete)="onDelete($event)"
