--- a/src/dashboard/users/containers/reset-password/reset-password.component.html
+++ b/src/dashboard/users/containers/reset-password/reset-password.component.html
@@ -22,8 +22,10 @@
             <user-list [userPage]="userPage" (edit)="onEdit($event)" (refresh)="refreshData($event)"></user-list>
         </div>
         <div class="col-md-5 col-12" *ngIf="user">
-            <reset-password-form [item]="user" (update)="onPasswordChange($event)">
-            </reset-password-form>
+            <div class=" border rounded bg-white">
+                <reset-password-form [item]="user" (update)="onPasswordChange($event)">
+                </reset-password-form>
+            </div>
         </div>
     </div>
 </div>
