--- a/src/dashboard/products/containers/new-products/new-products.component.html
+++ b/src/dashboard/products/containers/new-products/new-products.component.html
@@ -3,13 +3,12 @@
 </div>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-9 bg-white">
             <product-form [item]="product" [brands]="brandPage?.docs" [categories]="categoryPage?.docs"
                 [subCategories]="subCategoryPage?.docs" [subSubCategories]="subSubCategoryPage?.docs"
                 (create)="onCreate($event)" (update)="onUpdate($event)" (delete)="onDelete($event)"
                 (selectCategory)="handleCateogySelect($event)" (selectSubCategory)="handleSubCateogySelect($event)">
             </product-form>
-
         </div>
     </div>
 </div>
