--- a/src/dashboard/products/containers/new-products/new-products.component.scss
+++ b/src/dashboard/products/containers/new-products/new-products.component.scss
@@ -1,3 +1,11 @@
+:host {
+  font-size: 14px;
+  font-family: Montserrat, sans-serif;
+  display: block;
+  position: relative;
+  min-height: calc(100% - 57px);
+  background-color: #f2f4f5;
+}
 .product {
   padding: 2px;
   margin-bottom: 3px;
