--- a/src/dashboard/products/containers/warehouse/warehouse.component.html
+++ b/src/dashboard/products/containers/warehouse/warehouse.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-5" *ngIf="mode=='edit'">
-            <div class=" border rounded">
+            <div class=" border rounded bg-white">
                 <warehouse-form [item]="warehouse" [err]="errorMessage" (create)="onCreate($event)"
                     (update)="onUpdate($event)" (delete)="onDelete($event)"></warehouse-form>
             </div>
