--- a/src/dashboard/settings/containers/sub-categories/sub-categories.component.html
+++ b/src/dashboard/settings/containers/sub-categories/sub-categories.component.html
@@ -10,7 +10,7 @@
             </sub-category-table>
         </div>
         <div class="col-md-5">
-            <div class=" border rounded">
+            <div class=" border rounded bg-white">
                 <sub-category-form [item]="subCategory" [categories]="categoryPage?.docs" [err]="errorMessage" (create)="onCreate($event)"
                     (update)="onUpdate($event)" (delete)="onDelete($event)">
                 </sub-category-form>
