--- a/src/dashboard/users/components/user-form/user-form.component.html
+++ b/src/dashboard/users/components/user-form/user-form.component.html
@@ -1,8 +1,8 @@
-<div class="form-head border border-bottom-0">
+<div class="form-head">
     {{exists?'Update': 'New'}} User
 </div>
 
-<form [formGroup]="form" (ngSubmit)="submit()" (mouseleave)="mouseoverShifting = false" class="p-3 border">
+<form [formGroup]="form" (ngSubmit)="submit()" (mouseleave)="mouseoverShifting = false" class="p-3">
     <!-- Form Elements -->
     <form-input [fieldId]="'name'" [control]="form.get('name')"></form-input>
     <form-input [fieldId]="'email'" [control]="form.get('email')"></form-input>
