infinite scroll added to category page

--- a/src/home/containers/category/category.component.html
+++ b/src/home/containers/category/category.component.html
@@ -15,7 +15,6 @@
     <div class="cornerRibbon">Corner Ribbon</div>
   </div>
 </div> -->
-
 <div class="container">
   <div class="row">
     <div class="col-12 p-0">
@@ -23,9 +22,96 @@
     </div>
   </div>
 </div>
+
+
 <div class="container">
-  <!-- <div class="banner-title">{{categoryNav?.name}}</div> -->
-  <!-- <div class="banner-links">
+  <div class="row">
+    <div class="col-left">
+      <h5 class="filter-title">Filters</h5>
+      <ng-container *ngIf="subSubCategories?.length > 0">
+        <div class="refinement-header">
+          <span>Category</span>
+        </div>
+        <div class="sub-category">
+          <div class="sub-category-item my-2 ml-2" [class.active]="subSubCategory==null"
+            (click)="onSubSubCategoryClick('all')">
+            All
+          </div>
+          <div class="sub-category-item my-2 ml-2" [class.active]="subSubCategory?.slug==sc.slug"
+            *ngFor="let sc of subSubCategories" (click)="onSubSubCategoryClick(sc.slug)">
+            {{sc.name}}
+          </div>
+        </div>
+      </ng-container>
+
+      <!-- <div class="refinement-header">
+        <span>Price</span>
+      </div>
+      <form>
+        <div class="form-check my-1">
+          <input class="form-check-input" type="radio" name="priceRange" id="0to100" value="0to100">
+          <label class="form-check-label" for="0to100">
+            ৳0 - ৳100
+          </label>
+        </div>
+        <div class="form-check my-1">
+          <input class="form-check-input" type="radio" name="priceRange" id="101to500" value="101to500">
+          <label class="form-check-label" for="101to500">
+            ৳101 - ৳500
+          </label>
+        </div>
+        <div class="form-check my-1">
+          <input class="form-check-input" type="radio" name="priceRange" id="501to1000" value="501to1000">
+          <label class="form-check-label" for="501to1000">
+            ৳501 - ৳1000
+          </label>
+        </div>
+        <div class="form-check my-1">
+          <input class="form-check-input" type="radio" name="priceRange" id="1001to5000" value="1001to5000">
+          <label class="form-check-label" for="1001to5000">
+            ৳1001 - ৳5000
+          </label>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="from">From</label>
+            <input type="text" class="form-control" id="from">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="to">To</label>
+            <input type="text" class="form-control" id="to">
+          </div>
+        </div>
+      </form> -->
+
+    </div>
+    <div class="col-right">
+
+      <div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="errorMessage.length > 1">
+        {{errorMessage}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onCloseClick()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+      <infinite-scroll (scrolled)="onScroll()">
+        <div class="row clearfix m-0">
+          <div class="col-12 text-center" *ngIf="productList?.length == 0">
+            <i class="fa fa-frown-o"></i> Sorry no product found
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 p-0" *ngFor="let product of productList">
+            <product2 [product]="product" [thumbUrl]="prodThumbUrl" (cart)="onAddToCart($event)"
+              (shortDetails)="onShortDetails(productDetailsModal, $event)"></product2>
+          </div>
+        </div>
+      </infinite-scroll>
+      <loading *ngIf="loading"></loading>
+    </div>
+  </div>
+</div>
+<!-- <div class="banner-title">{{categoryNav?.name}}</div> -->
+<!-- <div class="banner-links">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
@@ -35,8 +121,8 @@
       </ol>
     </nav>
   </div> -->
-  <!-- <span class="banner-sub-title" *ngIf="sub_category">- {{sub_category.name}}</span> -->
-</div>
+<!-- <span class="banner-sub-title" *ngIf="sub_category">- {{sub_category.name}}</span> -->
+<!-- </div>
 <ng-template #productDetailsModal let-modal>
   <detail-modal [product]="product" [prodImageUrl]="prodImageUrl" [cartProduct]="product_list_cart"
     (dismiss)="modal.dismiss()" (cart)="onAddToCart($event)"></detail-modal>
@@ -56,9 +142,9 @@
         <div class="sub-category-item my-2 ml-2" [class.active]="selectedSubSubCat?.slug==sc.slug"
           *ngFor="let sc of subSubCategory" (click)="onSubCategoryClick(sc.slug)">
           {{sc.name}}
-        </div>
-        <!-- {{subCategory | json}} -->
-      </div>
+        </div> -->
+<!-- {{subCategory | json}} -->
+<!-- </div>
 
       <div class="refinement-header">
         <span>Price</span>
@@ -106,13 +192,13 @@
         <span>Brand</span>
       </div>
     </div>
-    <div class="col-right">
-      <loading *ngIf="loading"></loading>
-      <!-- <div class="alert alert-success" role="alert" >
+    <div class="col-right"> -->
+<!-- <loading *ngIf="loading"></loading> -->
+<!-- <div class="alert alert-success" role="alert" >
         {{errorMessage}}
       </div> -->
 
-      <div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="errorMessage.length > 1">
+<!-- <div class="alert alert-warning alert-dismissible fade show" role="alert" *ngIf="errorMessage.length > 1">
         {{errorMessage}}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="onCloseClick()">
           <span aria-hidden="true">&times;</span>
@@ -135,5 +221,5 @@
       </div>
     </div>
   </div>
-</div>
-<categories></categories>
+</div> -->
+<!-- <categories></categories> -->
