--- a/src/home/containers/category/category.component.scss
+++ b/src/home/containers/category/category.component.scss
@@ -1,9 +1,20 @@
 @import "../../../assets/theme.scss";
+
 :host {
+  font-size: 14px;
+  font-family: Montserrat, sans-serif;
   display: block;
-  background: #f8f8f9 none repeat scroll 0 0;
-  z-index: 0;
+  position: relative;
+  min-height: calc(100% - 57px);
+  background-color: #f2f4f5;
 }
+
+
+// :host {
+//   display: block;
+//   background: #f8f8f9 none repeat scroll 0 0;
+//   z-index: 0;
+// }
 
 .banner-image {
   width: 100%;
@@ -33,7 +44,7 @@
 .col-right {
   flex: 0 0 calc(100% - 220px);
   max-width: calc(100% - 220px);
-  padding: 0 10px;
+  padding-left: 0;
 }
 
 // .banner-links {
