--- a/src/shared/components/product2/product2.component.scss
+++ b/src/shared/components/product2/product2.component.scss
@@ -1,97 +1,96 @@
-:host{
+:host {
   font-family: "museosans";
 }
 .detail-card {
-    position: relative;
-    display: block;
-    -webkit-transition: border-color 0.1s ease-out;
-    transition: border-color 0.1s ease-out;
-    border: 1px solid #fff;
-    border-radius: 2px;
-    background-color: #fff;
-    //   height: 100%;
-    margin: 0 8px 8px 0;
-    &:hover {
-      border: 1px solid #f40;
+  position: relative;
+  display: block;
+  -webkit-transition: border-color 0.1s ease-out;
+  transition: border-color 0.1s ease-out;
+  border: 1px solid #fff;
+  border-radius: 2px;
+  background-color: #fff;
+  //   height: 100%;
+  margin: 0 0 10px 10px;
+  &:hover {
+    border: 1px solid #f40;
+  }
+  &-image img {
+    cursor: pointer;
+    padding: 0;
+    width: 100%;
+    height: 215px;
+  }
+  &-info {
+    cursor: pointer;
+    padding: 4px 8px;
+    &-title {
+      font-size: 15px;
+      line-height: 18px;
+      margin: 0;
+      text-transform: uppercase;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
-    &-image img {
-      cursor: pointer;
-      padding: 0;
-      width: 100%;
-      height: 215px;
+    &-size {
+      font-size: 12px;
+      color: #6e7272;
     }
-    &-info {
-      cursor: pointer;
-      padding: 4px 8px;
-      &-title {
-        font-size: 15px;
-        line-height: 18px;
-        margin: 0;
-        text-transform: uppercase;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-      &-size {
-        font-size: 12px;
-        color: #6e7272;
-      }
-      &-price {
-        text-align: center;
-        ins {
-          color: #f40;
-          font-size: 28px;
-          font-weight: 700;
-          margin: 0 5px;
-          text-decoration: none;
-        }
-        del {
-          color: #999;
-          padding: 0 5px;
-          position: relative;
-          text-decoration: none;
-          &::after {
-            background: #999 none repeat scroll 0 0;
-            content: "";
-            height: 1px;
-            left: 0;
-            position: absolute;
-            top: 10px;
-            width: 100%;
-          }
-        }
-      }
-    }
-    &-buttons {
-      display: flex;
-      flex-wrap: wrap;
-      transition: all 0.3s cubic-bezier(0.25, 0.2, 0.25, 1);
-      div,
-      a {
-        cursor: pointer;
-        padding: 6px;
-        font-family: "museosans";
-        flex: 0 0 50%;
-        max-width: 50%;
-        text-align: center;
-      }
-      .cart {
+    &-price {
+      text-align: center;
+      ins {
         color: #f40;
+        font-size: 28px;
         font-weight: 700;
-        &:hover {
-          background-color: #f40;
-          color: white;
-        }
-      }
-      .details {
+        margin: 0 5px;
         text-decoration: none;
-        color: #005ba2;
-        font-weight: 700;
-        &:hover {
-          background-color: #005ba2;
-          color: white;
+      }
+      del {
+        color: #999;
+        padding: 0 5px;
+        position: relative;
+        text-decoration: none;
+        &::after {
+          background: #999 none repeat scroll 0 0;
+          content: "";
+          height: 1px;
+          left: 0;
+          position: absolute;
+          top: 10px;
+          width: 100%;
         }
       }
     }
   }
-  
+  &-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    transition: all 0.3s cubic-bezier(0.25, 0.2, 0.25, 1);
+    div,
+    a {
+      cursor: pointer;
+      padding: 6px;
+      font-family: "museosans";
+      flex: 0 0 50%;
+      max-width: 50%;
+      text-align: center;
+    }
+    .cart {
+      color: #f40;
+      font-weight: 700;
+      &:hover {
+        background-color: #f40;
+        color: white;
+      }
+    }
+    .details {
+      text-decoration: none;
+      color: #005ba2;
+      font-weight: 700;
+      &:hover {
+        background-color: #005ba2;
+        color: white;
+      }
+    }
+  }
+}
