--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -24,10 +24,10 @@
 
     <div class="col-auto pt-2">
       <div class="cart form-inline mt-2 mt-md-0" (click)="onCartClick()">
-        <label class="form-control">৳{{cart?.sub_total}}</label>
+        <label class="form-control">৳{{cart?.total}}</label>
         <div class="input-group-append">
           <div class="input-group-text"><img class="search-icon" src="assets/images/svgs/cart.svg" alt="" /> &nbsp;
-            <span class="cart-count">{{cart?.poll}}</span>
+            <span class="cart-count">{{cart?.product_list?.length}}</span>
           </div>
         </div>
       </div>
