--- a/src/home/components/navbar/navbar.component.scss
+++ b/src/home/components/navbar/navbar.component.scss
@@ -1,6 +1,38 @@
 @import "../../../assets/theme.scss";
+.cart-item {
+  position: fixed;
+  top: calc(110px + 30%);
+  right: 0;
+  z-index: 2000;
+  cursor: pointer;
+  width: 75px;
+  height: 75px;
+  // background: #f5fceb;
+  background: #ffd300;
+  box-shadow: 0 0 16px -1px rgb(0 0 0 / 75%);
+  transition: 0.1s ease-in-out;
+  
+  .cart-icon{
+    display: block;
+    width: 24px;
+    margin: auto;
+    padding: 3px;
+  }
+  .cart-count{
+    padding-top: 5px;
+    display: block;
+    text-align: center;
+    font-size: 14px;
+  }
+  .cart-amount{
+    margin-top: 4px;
+    background-color: #c3161c;
+    text-align: center;
+    color: #ffd300;
+  }
+}
 
-.primary-logo{
+.primary-logo {
   height: 50px;
   padding: 5px 0;
 }
@@ -21,7 +53,7 @@
 .form-control {
   width: 10rem;
 }
-.cart{
+.cart {
   cursor: pointer;
 }
 .cart .form-control {
@@ -42,9 +74,9 @@
   }
 }
 
-.cart-count {
-  font-size: 12px;
-}
+// .cart-count {
+//   font-size: 12px;
+// }
 
 .input-group-text {
   padding: 3px;
@@ -53,7 +85,6 @@
 .search-icon {
   height: 30px;
 }
-
 
 // NAVBAR
 .navbar {
@@ -80,9 +111,9 @@
   }
 }
 
-.dropdown-menu{
+.dropdown-menu {
   padding: 0;
 }
-.dropdown-item{
+.dropdown-item {
   line-height: 1.25;
 }
