--- a/src/home/containers/cart/cart.component.html
+++ b/src/home/containers/cart/cart.component.html
@@ -1,69 +1,95 @@
 <navbar></navbar>
-<div class="container text-center my-4" *ngIf="!cart?.product_list.length">
+<div class="container text-center my-4" *ngIf="cart?.product_list?.length == 0">
     <h3><i class="fa fa-frown-o" aria-hidden="true"></i> Your cart is empty.</h3>
 </div>
-<div class="container mt-3" *ngIf="cart?.product_list.length">
+<div class="container mt-3" *ngIf="cart?.product_list?.length > 0">
     <div class="row">
-        <div class="col-md-8">
-            <h5>Cart</h5>
-            <div class="row product" *ngFor="let item of cart?.product_list">
-                <div class="col-auto">
-                    <img class="product-image" [src]="thumbUrl + item.product._id"
-                        [alt]="item.product.name + ' image'" />
+        <div class="col-12">
+            <div class="card mb-5">
+                <div class="card-header">
+                    <h2><img class="cart-icon" src="assets/images/svgs/cart2.svg" alt="" /> Shopping Cart</h2>
                 </div>
-                <div class="col">
-                    <div class="product-name">{{ item.product.name }}</div>
-                    <div class="product-size">Size : {{ item.product.size }}</div>
-                    <div class="product-price">Price : {{ item.rate }}</div>
-                    <div class="product-quantity">
-                        Quantity :
-                        <i class="fa fa-minus" (click)="setQuantity(item.product._id, -1)"></i>
-                        &nbsp; {{ item.quantity }} &nbsp;
-                        <i class="fa fa-plus" (click)="setQuantity(item.product._id, 1)"></i>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered m-0">
+                            <thead>
+                                <tr>
+                                    <!-- Set columns width -->
+                                    <th class="text-center py-2 px-4" style="min-width: 400px;">Product Name &amp;
+                                        Details</th>
+                                    <th class="text-right py-2 px-4" style="width: 100px;">Price</th>
+                                    <th class="text-center py-2 px-4" style="width: 150px;">Quantity</th>
+                                    <th class="text-right py-2 px-4" style="width: 100px;">Total</th>
+                                    <!-- <th class="text-center align-middle py-3 px-0" style="width: 40px;"><a href="#"
+                                            class="shop-tooltip float-none text-light" title=""
+                                            data-original-title="Clear cart"><i class="ino ion-md-trash"></i></a></th> -->
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let item of cart?.product_list">
+                                    <td class="p-2">
+                                        <div class="media align-items-center">
+                                            <img class="product-image" [src]="thumbUrl + item.product._id"
+                                                [alt]="item.product.name + ' image'" />
+                                            <div class="media-body">
+                                                <a [routerLink]="'/details/'+item.product._id" target="_blank"
+                                                    class="d-block text-dark">{{ item.product.name }}</a>
+                                                <small>
+                                                    <span class="text-muted">Size: </span>
+                                                    {{ item.product.size }}
+                                                </small>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td class="text-right font-weight-semibold align-middle p-2">৳ {{ item.rate }}</td>
+                                    <td class="align-middle p-2">
+                                        <i class="fa fa-minus  border p-1 rounded-sm"
+                                            (click)="setQuantity(item.product._id, -1)"></i>
+                                        &nbsp; {{ item.quantity }} &nbsp;
+                                        <i class="fa fa-plus border p-1 rounded-sm"
+                                            (click)="setQuantity(item.product._id, 1)"></i>
+                                    </td>
+                                    <td class="text-right font-weight-semibold align-middle p-2">৳{{ item.amount }}</td>
+                                    <!-- <td class="text-center align-middle px-0"><a href="#"
+                                            class="shop-tooltip close float-none text-danger" title=""
+                                            data-original-title="Remove">×</a></td> -->
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th class="text-right">Total</th>
+                                    <th></th>
+                                    <th></th>
+                                    <th class="text-right text-right font-weight-semibold align-middle p-1">৳{{
+                                        cart?.total }}</th>
+                                </tr>
+                            </tfoot>
+                        </table>
                     </div>
                 </div>
-                <div class="col-auto product-amount">৳{{ item.amount }}</div>
-            </div>
 
-            <h5>Shipping</h5>
-            Add/Edit
-            <a routerLocation="/shippingAddess"><strong> Shipping location </strong></a>
-        </div>
-
-        <!-- Cart Summary -->
-        <div class="col-md-4">
-            <h5>Summary</h5>
-            <div class="promo-text">
-                Do you have any
-                <span class="promo-text-link" (click)="onTogglePromoForm()">Promo coder ?</span>
-            </div>
-            <div class="promo-form my-2" [class.show]="showPromoForm">
-                <form class="form-inline">
-                    <div class="form-group mb-2">
-                        <input type="text" class="form-control mr-2" id="staticEmail2" />
+                <div class="d-flex flex-wrap justify-content-between align-items-center px-4 pb-5">
+                    <div class="mt-1">
+                        <div class="promo-text">
+                            Apply
+                            <span class="promo-text-link" (click)="onTogglePromoForm()">Promo code?</span>
+                        </div>
+                        <div class="promo-form my-2" [class.show]="showPromoForm">
+                            <form class="form-inline">
+                                <div class="form-group mb-2">
+                                    <input type="text" class="form-control form-control-sm mr-2" id="staticEmail2" />
+                                </div>
+                                <button type="submit" class="btn btn-sm btn-outline-secondary mb-2">
+                                    Apply
+                                </button>
+                            </form>
+                        </div>
                     </div>
-                    <button type="submit" class="btn btn-outline-secondary mb-2">
-                        Apply
-                    </button>
-                </form>
+                    <div class="d-flex">
+                        <button class="btn btn-sm btn-primary">Order now</button>
+                    </div>
+                </div>
             </div>
-            <div class="d-flex justify-content-between">
-                <span>Subtotal</span> <span>৳{{ cart?.sub_total }}</span>
-            </div>
-            <div class="d-flex justify-content-between" *ngIf="cart?.total_discount > 0">
-                <span>Discount</span> <span>৳{{ cart?.total_discount }}</span>
-            </div>
-            <div class="d-flex justify-content-between">
-                <span>Estimated Shipping & Handling</span>
-                <span>৳{{ cart?.shipping_charge }}</span>
-            </div>
-            <div class="d-flex justify-content-between">
-                <span>Estimated Tax</span> <span>৳{{ cart?.total_tax }}</span>
-            </div>
-            <div class="d-flex justify-content-between border-top border-bottom py-2 my-2">
-                <strong>Total</strong> <strong>৳{{ cart?.total }}</strong>
-            </div>
-            <button class="btn btn-block btn-outline-success">Order now</button>
         </div>
     </div>
 </div>
