--- a/src/home/containers/cart/cart.component.scss
+++ b/src/home/containers/cart/cart.component.scss
@@ -1,3 +1,34 @@
+:host {
+  display: block;
+  margin-top: 20px;
+  background: #eee;
+}
+.ui-w-40 {
+  width: 40px !important;
+  height: auto;
+}
+
+.card {
+  box-shadow: 0 1px 15px 1px rgba(52, 40, 104, 0.08);
+}
+.product-image{
+  width: 50px;
+}
+.ui-product-color {
+  display: inline-block;
+  overflow: hidden;
+  margin: 0.144em;
+  width: 0.875rem;
+  height: 0.875rem;
+  border-radius: 10rem;
+  -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset;
+  vertical-align: middle;
+}
+.cart-icon{
+  width: 50px;
+}
+
 .promo {
   &-text {
     &-link {
@@ -14,30 +45,30 @@
     }
   }
 }
-.product {
-  border-bottom: 1px solid #e5e5e5;
-  color: #757575;
-  font-weight: 300;
-  padding: 10px 0;
-  &-image {
-    height: 100px;
-    width: 100px;
-    margin-right: 10px;
-  }
-  &-name {
-    font-size: 16px;
-    font-weight: 600;
-    color: black;
-  }
-  &-quantity {
-    color: #f40;
-    & i {
-      cursor: pointer;
-      //   color: black;
-    }
-  }
-  &-amount {
-    color: black;
-    font-weight: 500;
-  }
-}
+// .product {
+//   border-bottom: 1px solid #e5e5e5;
+//   color: #757575;
+//   font-weight: 300;
+//   padding: 10px 0;
+//   &-image {
+//     height: 100px;
+//     width: 100px;
+//     margin-right: 10px;
+//   }
+//   &-name {
+//     font-size: 16px;
+//     font-weight: 600;
+//     color: black;
+//   }
+//   &-quantity {
+//     color: #f40;
+//     & i {
+//       cursor: pointer;
+//       //   color: black;
+//     }
+//   }
+//   &-amount {
+//     color: black;
+//     font-weight: 500;
+//   }
+// }
