--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container d-print-none">
   <div class="row">
     <div class="col-auto">
       <div class="primary-logo">
