--- a/src/home/containers/cart/cart.component.html
+++ b/src/home/containers/cart/cart.component.html
@@ -1,97 +1,105 @@
-<navbar></navbar>
 <div class="container text-center my-4" *ngIf="cart?.product_list?.length == 0">
     <h3><i class="fa fa-frown-o" aria-hidden="true"></i> Your cart is empty.</h3>
 </div>
-<div class="container mt-3" *ngIf="cart?.product_list?.length > 0">
-    <div class="row">
-        <div class="col-12">
-            <div class="card mb-5">
-                <div class="card-header">
-                    <h2><img class="cart-icon" src="assets/images/svgs/cart2.svg" alt="" /> Shopping Cart</h2>
-                </div>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-bordered m-0">
-                            <thead>
-                                <tr>
-                                    <!-- Set columns width -->
-                                    <th class="text-center py-2 px-4" style="min-width: 400px;">Product Name &amp;
-                                        Details</th>
-                                    <th class="text-right py-2 px-4" style="width: 100px;">Price</th>
-                                    <th class="text-center py-2 px-4" style="width: 150px;">Quantity</th>
-                                    <th class="text-right py-2 px-4" style="width: 100px;">Total</th>
-                                    <!-- <th class="text-center align-middle py-3 px-0" style="width: 40px;"><a href="#"
+<div class="cart">
+    <div class="container pt-4" *ngIf="!order && cart?.product_list?.length > 0">
+        <div class="row">
+            <div class="col-12">
+                <div class="card mb-5">
+                    <div class="card-header">
+                        <h2><img class="cart-icon" src="assets/images/svgs/cart2.svg" alt="" /> Shopping Cart</h2>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-bordered m-0">
+                                <thead>
+                                    <tr>
+                                        <!-- Set columns width -->
+                                        <th class="text-center py-2 px-4" style="min-width: 400px;">Product Name &amp;
+                                            Details</th>
+                                        <th class="text-right py-2 px-4" style="width: 100px;">Price</th>
+                                        <th class="text-center py-2 px-4" style="width: 150px;">Quantity</th>
+                                        <th class="text-right py-2 px-4" style="width: 100px;">Total</th>
+                                        <!-- <th class="text-center align-middle py-3 px-0" style="width: 40px;"><a href="#"
                                             class="shop-tooltip float-none text-light" title=""
                                             data-original-title="Clear cart"><i class="ino ion-md-trash"></i></a></th> -->
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let item of cart?.product_list">
-                                    <td class="p-2">
-                                        <div class="media align-items-center">
-                                            <img class="product-image" [src]="thumbUrl + item.product._id"
-                                                [alt]="item.product.name + ' image'" />
-                                            <div class="media-body">
-                                                <a [routerLink]="'/details/'+item.product._id" target="_blank"
-                                                    class="d-block text-dark">{{ item.product.name }}</a>
-                                                <small>
-                                                    <span class="text-muted">Size: </span>
-                                                    {{ item.product.size }}
-                                                </small>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let item of cart?.product_list">
+                                        <td class="p-2">
+                                            <div class="media align-items-center">
+                                                <img class="product-image" [src]="thumbUrl + item.product._id"
+                                                    [alt]="item.product.name + ' image'" />
+                                                <div class="media-body">
+                                                    <a [routerLink]="'/details/'+item.product._id" target="_blank"
+                                                        class="d-block text-dark">{{ item.product.name }}</a>
+                                                    <small>
+                                                        <span class="text-muted">Size: </span>
+                                                        {{ item.product.size }}
+                                                    </small>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </td>
-                                    <td class="text-right font-weight-semibold align-middle p-2">৳ {{ item.rate }}</td>
-                                    <td class="align-middle p-2">
-                                        <i class="fa fa-minus  border p-1 rounded-sm"
-                                            (click)="setQuantity(item.product._id, -1)"></i>
-                                        &nbsp; {{ item.quantity }} &nbsp;
-                                        <i class="fa fa-plus border p-1 rounded-sm"
-                                            (click)="setQuantity(item.product._id, 1)"></i>
-                                    </td>
-                                    <td class="text-right font-weight-semibold align-middle p-2">৳{{ item.amount }}</td>
-                                    <!-- <td class="text-center align-middle px-0"><a href="#"
-                                            class="shop-tooltip close float-none text-danger" title=""
-                                            data-original-title="Remove">×</a></td> -->
-                                </tr>
-                            </tbody>
-                            <tfoot>
-                                <tr>
-                                    <th class="text-right">Total</th>
-                                    <th></th>
-                                    <th></th>
-                                    <th class="text-right text-right font-weight-semibold align-middle p-1">৳{{
-                                        cart?.total }}</th>
-                                </tr>
-                            </tfoot>
-                        </table>
+                                        </td>
+                                        <td class="text-right font-weight-semibold align-middle p-2">৳ {{ item.rate }}
+                                        </td>
+                                        <td class="align-middle p-2">
+                                            <i class="fa fa-minus  border p-1 rounded-sm"
+                                                (click)="setQuantity(item.product._id, -1)"></i>
+                                            &nbsp; {{ item.quantity }} &nbsp;
+                                            <i class="fa fa-plus border p-1 rounded-sm"
+                                                (click)="setQuantity(item.product._id, 1)"></i>
+                                        </td>
+                                        <td class="text-right font-weight-semibold align-middle p-2">৳{{ item.amount }}
+                                        </td>
+                                    </tr>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <th class="text-right">Total</th>
+                                        <th></th>
+                                        <th></th>
+                                        <th class="text-right text-right font-weight-semibold align-middle p-1">৳{{
+                                            cart?.total }}</th>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
                     </div>
-                </div>
 
-                <div class="d-flex flex-wrap justify-content-between align-items-center px-4 pb-5">
-                    <div class="mt-1">
-                        <div class="promo-text">
-                            Apply
-                            <span class="promo-text-link" (click)="onTogglePromoForm()">Promo code?</span>
+                    <div class="d-flex flex-wrap justify-content-between align-items-center px-4 pb-5">
+                        <div class="mt-1">
+                            <div class="promo-text">
+                                Apply
+                                <span class="promo-text-link" (click)="onTogglePromoForm()">Promo code?</span>
+                            </div>
+                            <div class="promo-form my-2" [class.show]="showPromoForm">
+                                <form class="form-inline">
+                                    <div class="form-group mb-2">
+                                        <input type="text" class="form-control form-control-sm mr-2"
+                                            id="staticEmail2" />
+                                    </div>
+                                    <button type="submit" class="btn btn-sm btn-outline-secondary mb-2">
+                                        Apply
+                                    </button>
+                                </form>
+                            </div>
                         </div>
-                        <div class="promo-form my-2" [class.show]="showPromoForm">
-                            <form class="form-inline">
-                                <div class="form-group mb-2">
-                                    <input type="text" class="form-control form-control-sm mr-2" id="staticEmail2" />
-                                </div>
-                                <button type="submit" class="btn btn-sm btn-outline-secondary mb-2">
-                                    Apply
-                                </button>
-                            </form>
+                        <div class="d-flex">
+                            <!-- <a class="btn btn-sm btn-primary" (click)="onConfirmOrder()">Order now</a> -->
+                            <a class="btn btn-sm btn-primary" routerLink="/order-detail">Order now</a>
                         </div>
-                    </div>
-                    <div class="d-flex">
-                        <button class="btn btn-sm btn-primary">Order now</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
+    
+
+    <div class="container text-center py-5" *ngIf="!cart?.product_list || cart?.product_list?.length == 0">
+        <h3><i class="fa fa-frown-o" aria-hidden="true"></i> Your cart is empty</h3>
+    </div>
+
+</div>
 <fotter></fotter>
