--- a/src/home/containers/orders/orders.component.html
+++ b/src/home/containers/orders/orders.component.html
@@ -1,1 +1,12 @@
-<p>orders works!</p>
+<div class="container">
+    <div class="row py-3">
+        <div class="col-auto d-print-none">
+            <div *ngFor="let order of orderPage?.docs" (click)="onDetails(order._id)">
+                <app-order-item [order]="order"></app-order-item>
+            </div>
+        </div>
+        <div class="col" *ngIf="order">
+            <app-order-details [order]="order"></app-order-details>
+        </div>
+    </div>
+</div>
